--- a/www/templates/includes/delivery.form.html
+++ b/www/templates/includes/delivery.form.html
@@ -60,7 +60,7 @@
 		</div>
 		<div class="row text-center p10 bg-default font30">
         	<span class="width50"><b>Shipping Fee:</b></span>
-        	<span class="width50"><b>{{SalesInfo.shipping_price}}</b></span>
+        	<span class="width50"><b>MYR {{SalesInfo.PriceInfo.shipping_price}}</b></span>
 		</div>
 	</div>
 	<div class="row">
