--- a/www/templates/order.summary.html
+++ b/www/templates/order.summary.html
@@ -26,7 +26,7 @@
 	<!-- discount -->
 	<div class="row text-right pt5 text-danger">
 		<div class="col col-75">Discount ({{SalesInfo.PriceInfo.discount}}):</div>
-		<div class="col">{{SalesInfo.PriceInfo.after_discount}}</div>
+		<div class="col">{{SalesInfo.PriceInfo.discount_price}}</div>
 	</div>
     <!-- shipping -->
     <div class="row text-right pt5 text-danger">
