--- a/www/templates/shipping.html
+++ b/www/templates/shipping.html
@@ -5,14 +5,14 @@
 		<!-- tab -->
 		<ion-tab title="DELIVERY" class="bg" style="background-image: url('img/bg/billing.png')">
 			<ion-content>
-                <div ng-include src="'templates/includes/delivery.html'"></div>
+                <div ng-include src="'templates/includes/delivery.form.html'"></div>
 			</ion-content>
 		</ion-tab>
 
 		<!-- tab -->
 		<ion-tab title="SELF PICKUP">
 			<ion-content class="bg" style="background-image: url('img/bg/billing.png')">
-		  		<div ng-include src="'templates/includes/selfpickup.html'"></div>
+		  		<div ng-include src="'templates/includes/selfpickup.form.html'"></div>
 			</ion-content>
 		</ion-tab>
 
